--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,37 @@ body {
     display:flex;
     flex-direction: column;
     align-items: space-evenly;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
+
+.topBar {
+    display: flex;
+    justify-content: end;
+    height: 50px;
+    flex-direction: row;
+    gap:5px;
+}
+
+.restart {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    border: 2px solid white;
+    border-radius: 5px;
+    font-size: 19px;
+}
+
+.settings { 
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    border: 2px solid white;
+    border-radius: 5px;
+    font-size: 19px;
+}
+
 
 .options {
     display: flex;
@@ -15,7 +44,6 @@ body {
     flex-wrap: wrap;
     gap: 20px;
 }
-
 
 .option {
     display: flex;
@@ -28,6 +56,10 @@ body {
     text-align: center;
     align-items: center;
     font-size: 40px;
+}
+
+.option:hover, .restart:hover, .settings:hover{
+    background-color: grey;
 }
 
 .scoreBox {
@@ -69,6 +101,106 @@ body {
 }
 
 
+/*Standard Modal */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modalContent {
+    background-color: black;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 2px solid white;
+    border-radius:5px;
+    width: 400px; /* Could be more or less, depending on screen size */
+    font-size:26px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+/*Settings modal*/
+.settingsModal {
+    display: none; /*REMEMBER CHANGE TO NONE*/
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.settingsModalContent {
+    background-color: black;
+    margin: 15% auto;
+    padding: 20px;
+    border: 2px white solid;
+    border-radius: 5px;
+    width: 400px;
+    font-size: 26px;
+    flex-direction: column;
+}
+
+.closeSettings {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.closeSettings:hover,
+.closeSettings:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/*Animating for ALL modals: slide in from bottom*/
+.modalAnimation {
+    animation-name: modalAnimation;
+    animation-duration: 0.4s;
+}
+
+@keyframes modalAnimation {
+    0%   {margin: 75% auto;}
+    50%   {}
+    100%   {margin: 15% auto;}
+}
+
+/*Button click animation */
+.optionAnimation {
+    animation-name: optionAnimation;
+    animation-duration: 0.4s;
+}
+
+@keyframes optionAnimation {
+    0%   {}
+    50%   {width: 260px; height: 157px;}
+    100%   {}
+}
+
 /* Win and lose animations*/
 .lose {
     animation-name: loseAnimation;
@@ -87,9 +219,9 @@ body {
 }
 
 @keyframes winAnimation {
-    0%   {color: green;}
-    50%  {color: green; font-size: 26px;}
-    100% {color: green;}
+    0%   {color: lightgreen;}
+    50%  {color: lightgreen; font-size: 26px;}
+    100% {color: lightgreen;}
 }
 
 .tie {
