Human vs human added

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     font-size: 19px;
 }
 
-.settings { 
+.settingsButton { 
     display:flex;
     justify-content: center;
     align-items: center;
@@ -33,6 +33,14 @@ body {
     border: 2px solid white;
     border-radius: 5px;
     font-size: 19px;
+}
+
+.playerTurn {
+    display:flex;
+    text-align: center;
+    justify-content: center;
+    font-size: 32px;
+    transition-duration: 0.2s;
 }
 
 
@@ -58,7 +66,7 @@ body {
     font-size: 40px;
 }
 
-.option:hover, .restart:hover, .settings:hover{
+.option:hover, .restart:hover, .settingsButton:hover, .humanVsComputerSetting:hover, .humanVsHumanSetting:hover{
     background-color: grey;
 }
 
@@ -68,7 +76,7 @@ body {
     display:flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 450px;
+    width: 350px;;
     text-align: center;
     margin: 20px;
     padding: 10px;
@@ -116,12 +124,14 @@ body {
 }
 
 .modalContent {
+    display: flex;
+    flex: 1 1 auto;
     background-color: black;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 2px solid white;
     border-radius:5px;
-    width: 400px; /* Could be more or less, depending on screen size */
+    max-width: 400px; /* Could be more or less, depending on screen size */
     font-size:26px;
 }
 
@@ -153,12 +163,14 @@ body {
 }
 
 .settingsModalContent {
+    display: flex;
+    flex: 1 1 auto;
     background-color: black;
     margin: 15% auto;
     padding: 20px;
     border: 2px white solid;
     border-radius: 5px;
-    width: 400px;
+    max-width: 400px;
     font-size: 26px;
     flex-direction: column;
 }
@@ -175,6 +187,21 @@ body {
   color: white;
   text-decoration: none;
   cursor: pointer;
+}
+
+.settingsSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 200px;
+    margin: 10px auto;
+}
+
+.humanVsComputerSetting, .humanVsHumanSetting {
+    border: white 2px solid; 
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
 }
 
 /*Animating for ALL modals: slide in from bottom*/
@@ -233,4 +260,10 @@ body {
     0%   {color: yellow;}
     50%  {color: yellow; font-size: 26px;}
     100% {color: yellow;}
+}
+
+/*Remove styling on links*/
+a {
+color: white;
+font-style: none;
 }
