--- a/styles.css
+++ b/styles.css
@@ -109,18 +109,18 @@ body {
 }
 
 
-/*Standard Modal */
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
 }
 
 .modalContent {
@@ -131,7 +131,7 @@ body {
     padding: 20px;
     border: 2px solid white;
     border-radius:5px;
-    max-width: 400px; /* Could be more or less, depending on screen size */
+    max-width: 400px; 
     font-size:26px;
 }
 
@@ -148,9 +148,9 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
-/*Settings modal*/
+
 .settingsModal {
-    display: none; /*REMEMBER CHANGE TO NONE*/
+    display: none; 
     position: fixed;
     z-index: 1;
     left: 0;
